fix spec issue