@@ -21,126 +21,132 @@ import java.net.URL;
 @Mapper(componentModel = "jsr330", uses = IdHelper.class)
 public abstract class TMForumMapper extends BaseMapper {
 
-    // resource catalog
+	// resource catalog
 
-    @Mapping(target = "id", source = "id")
-    @Mapping(target = "href", source = "id")
-    public abstract ResourceCatalogVO map(ResourceCatalogCreateVO resourceCatalogCreateVO, URI id);
+	@Mapping(target = "id", source = "id")
+	@Mapping(target = "href", source = "id")
+	public abstract ResourceCatalogVO map(ResourceCatalogCreateVO resourceCatalogCreateVO, URI id);
 
-    public abstract ResourceCatalogVO map(ResourceCatalog resourceCatalog);
+	public abstract ResourceCatalogVO map(ResourceCatalog resourceCatalog);
 
-    public abstract ResourceCatalog map(ResourceCatalogVO resourceCatalogVO);
+	public abstract ResourceCatalog map(ResourceCatalogVO resourceCatalogVO);
 
-    @Mapping(target = "id", source = "id")
-    public abstract ResourceCatalog map(ResourceCatalogUpdateVO resourceCatalogUpdateVO, String id);
+	@Mapping(target = "id", source = "id")
+	public abstract ResourceCatalog map(ResourceCatalogUpdateVO resourceCatalogUpdateVO, String id);
 
-    // resource specification
+	// resource specification
 
-    @Mapping(target = "id", source = "id")
-    @Mapping(target = "href", source = "id")
-    public abstract ResourceSpecificationVO map(ResourceSpecificationCreateVO resourceSpecificationCreateVO, URI id);
+	@Mapping(target = "id", source = "id")
+	@Mapping(target = "href", source = "id")
+	public abstract ResourceSpecificationVO map(ResourceSpecificationCreateVO resourceSpecificationCreateVO, URI id);
 
-    public abstract ResourceSpecificationVO map(ResourceSpecification resourceSpecification);
+	public abstract ResourceSpecificationVO map(ResourceSpecification resourceSpecification);
 
-    public abstract ResourceSpecification map(ResourceSpecificationVO resourceCandidateVO);
+	public abstract ResourceSpecification map(ResourceSpecificationVO resourceCandidateVO);
 
-    @Mapping(target = "id", source = "id")
-    public abstract ResourceSpecification map(ResourceSpecificationUpdateVO resourceSpecificationUpdateVO, String id);
+	@Mapping(target = "id", source = "id")
+	public abstract ResourceSpecification map(ResourceSpecificationUpdateVO resourceSpecificationUpdateVO, String id);
 
-    // resource catalog
+	// resource catalog
 
-    @Mapping(target = "id", source = "id")
-    @Mapping(target = "href", source = "id")
-    public abstract ResourceCandidateVO map(ResourceCandidateCreateVO resourceCandidateCreateVO, URI id);
+	@Mapping(target = "id", source = "id")
+	@Mapping(target = "href", source = "id")
+	public abstract ResourceCandidateVO map(ResourceCandidateCreateVO resourceCandidateCreateVO, URI id);
 
-    public abstract ResourceCandidateVO map(ResourceCandidate resourceCandidate);
+	public abstract ResourceCandidateVO map(ResourceCandidate resourceCandidate);
 
-    public abstract ResourceCandidate map(ResourceCandidateVO resourceCandidateVO);
+	public abstract ResourceCandidate map(ResourceCandidateVO resourceCandidateVO);
 
-    @Mapping(target = "id", source = "id")
-    public abstract ResourceCandidate map(ResourceCandidateUpdateVO resourceCandidateUpdateVO, String id);
+	@Mapping(target = "id", source = "id")
+	public abstract ResourceCandidate map(ResourceCandidateUpdateVO resourceCandidateUpdateVO, String id);
 
-    // resource catalog
+	// resource catalog
 
-    @Mapping(target = "id", source = "id")
-    @Mapping(target = "href", source = "id")
-    public abstract ResourceCategoryVO map(ResourceCategoryCreateVO resourceCategoryCreateVO, URI id);
+	@Mapping(target = "id", source = "id")
+	@Mapping(target = "href", source = "id")
+	public abstract ResourceCategoryVO map(ResourceCategoryCreateVO resourceCategoryCreateVO, URI id);
 
-    public abstract ResourceCategoryVO map(ResourceCategory resourceCategory);
+	public abstract ResourceCategoryVO map(ResourceCategory resourceCategory);
 
-    public abstract ResourceCategory map(ResourceCategoryVO resourceCategoryVO);
+	public abstract ResourceCategory map(ResourceCategoryVO resourceCategoryVO);
 
-    @Mapping(target = "id", source = "id")
-    public abstract ResourceCategory map(ResourceCategoryUpdateVO resourceCategoryUpdateVO, String id);
+	@Mapping(target = "id", source = "id")
+	public abstract ResourceCategory map(ResourceCategoryUpdateVO resourceCategoryUpdateVO, String id);
 
-    @Mapping(target = "query", source = "rawQuery")
-    public abstract EventSubscriptionVO map(TMForumSubscription subscription);
+	@Mapping(target = "query", source = "rawQuery")
+	public abstract EventSubscriptionVO map(TMForumSubscription subscription);
 
-    @Mapping(target = "specId", source = "id")
-    public abstract FeatureSpecification map(FeatureSpecificationVO featureSpecificationVO);
+	@Mapping(target = "specId", source = "id")
+	public abstract FeatureSpecification map(FeatureSpecificationVO featureSpecificationVO);
 
-    @Mapping(target = "id", source = "specId")
-    public abstract FeatureSpecificationVO map(FeatureSpecification featureSpecification);
+	@Mapping(target = "id", source = "specId")
+	public abstract FeatureSpecificationVO map(FeatureSpecification featureSpecification);
 
-    public URL map(String value) {
-        if (value == null) {
-            return null;
-        }
-        try {
-            return new URL(value);
-        } catch (MalformedURLException e) {
-            throw new MappingException(String.format("%s is not a URL.", value), e);
-        }
-    }
+	@Mapping(target = "charValue", source = "value")
+	public abstract CharacteristicValue map(CharacteristicValueSpecificationVO characteristicVO);
 
-    public String map(URL value) {
-        if (value == null) {
-            return null;
-        }
-        return value.toString();
-    }
+	@Mapping(target = "value", source = "charValue")
+	public abstract CharacteristicValueSpecificationVO map(CharacteristicValue characteristic);
 
-    public URI mapToURI(String value) {
-        if (value == null) {
-            return null;
-        }
-        return URI.create(value);
-    }
+	public URL map(String value) {
+		if (value == null) {
+			return null;
+		}
+		try {
+			return new URL(value);
+		} catch (MalformedURLException e) {
+			throw new MappingException(String.format("%s is not a URL.", value), e);
+		}
+	}
 
-    public String mapFromURI(URI value) {
-        if (value == null) {
-            return null;
-        }
-        return value.toString();
-    }
+	public String map(URL value) {
+		if (value == null) {
+			return null;
+		}
+		return value.toString();
+	}
 
-    public ResourceSpecificationRef mapFromResourceSpecId(String id) {
-        if (id == null) {
-            return null;
-        }
-        return new ResourceSpecificationRef(id);
-    }
+	public URI mapToURI(String value) {
+		if (value == null) {
+			return null;
+		}
+		return URI.create(value);
+	}
 
-    public ResourceCategoryRef mapFromCategoryId(String id) {
-        if (id == null) {
-            return null;
-        }
-        return new ResourceCategoryRef(URI.create(id));
-    }
+	public String mapFromURI(URI value) {
+		if (value == null) {
+			return null;
+		}
+		return value.toString();
+	}
 
-    public String mapFromCategoryRef(ResourceCategoryRef categoryRef) {
-        if (categoryRef == null) {
-            return null;
-        }
-        return categoryRef.getEntityId().toString();
-    }
+	public ResourceSpecificationRef mapFromResourceSpecId(String id) {
+		if (id == null) {
+			return null;
+		}
+		return new ResourceSpecificationRef(id);
+	}
 
-    public String mapFromResourceSpecificationRef(ResourceSpecificationRef resourceSpecificationRef) {
-        if (resourceSpecificationRef == null) {
-            return null;
-        }
-        return resourceSpecificationRef.getEntityId().toString();
-    }
+	public ResourceCategoryRef mapFromCategoryId(String id) {
+		if (id == null) {
+			return null;
+		}
+		return new ResourceCategoryRef(URI.create(id));
+	}
+
+	public String mapFromCategoryRef(ResourceCategoryRef categoryRef) {
+		if (categoryRef == null) {
+			return null;
+		}
+		return categoryRef.getEntityId().toString();
+	}
+
+	public String mapFromResourceSpecificationRef(ResourceSpecificationRef resourceSpecificationRef) {
+		if (resourceSpecificationRef == null) {
+			return null;
+		}
+		return resourceSpecificationRef.getEntityId().toString();
+	}
 }
 
 
